--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 @layer utilities {
@@ -25,3 +28,4 @@ body {
     text-wrap: balance;
   }
 }
+
